--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     <input type="text" id="input-el">
     <button type="button" id="input-btn">SAVE INPUT</button>
+    <button type="button" id="delete-btn">DELETE ALL</button>
     <ul id="ul-el"></ul>
     <script src="index.js"></script>
 </body>
